// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="Pill"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    className="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a close button 1`] = `
<div
  className="Pill my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    className="Pill__label"
    title="test"
  >
    test
  </span>
  <button
    aria-label="close"
    className="Pill__close-button"
    onClick={[Function]}
    type="button"
  >
    <TabFocusTrap>
      <Icon
        className="Pill__icon"
        color="muted"
        icon="Close"
        size="small"
        testId="cf-ui-icon"
      />
    </TabFocusTrap>
  </button>
</div>
`;

exports[`renders the component with a dragging handle 1`] = `
<div
  className="Pill my-extra-class"
  data-test-id="cf-ui-pill"
  onDrag={[Function]}
>
  <span
    className="Pill__drag-icon"
  >
    <Icon
      className="Pill__icon"
      color="muted"
      icon="Drag"
      size="small"
      testId="cf-ui-icon"
    />
  </span>
  <span
    aria-label="test"
    className="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with a test id 1`] = `
<div
  className="Pill my-extra-class"
  data-test-id="test-id"
>
  <span
    aria-label="test"
    className="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="Pill my-extra-class"
  data-test-id="cf-ui-pill"
>
  <span
    aria-label="test"
    className="Pill__label"
    title="test"
  >
    test
  </span>
</div>
`;
